using UnityEngine;

namespace Game.Utils
{
    public static class PlayerConstants
    {
        /*
            MAGIC NUMBERS
        */
        public const float NegativeRightAngle = -22.5f;
        public const float PositiveRightAngle = 22.5f;

        public const float NegativeLeftAngle = -157.5f;
        public const float PositiveLeftAngle = 157.5f;

        public const float UpRightLessAngle = 67.5f;

        public const float UpAngle = 67.5f;
        public const float UpAngleSecondary = 112.5f;

        public const float UpLeftLessAngle = 157.5f;
        public const float DownRightGreaterAngle = -22.5f;
        public const float DownRightLessAngle = -67.5f;
        public const float DownAngleUpper = -67.5f;
        public const float DownAngleLower = -112.5f;
        public const float DownLeftGreaterAngle = -112.5f;
        public const float DownLeftLessAngle = -157.5f;


        /*
          MAGIC STRINGS
        */
        public const string Right = "Right";
        public const string UpRight = "Up-Right";
        public const string Up = "Up";
        public const string UpLeft = "Up-Left";
        public const string Left = "Left";
        public const string DownRight = "Down-Right";
        public const string Down = "Down";
        public const string DownLeft = "Down-Left";

       
        public const string AnimHorizontal = "Horizontal";
        public const string AnimVertical = "Vertical";
        public const string AnimShoot = "Shoot";
        public const string Speed = "Speed";

    }

}

